--- a/client/src/app/funcionario-pages/relatorio-clientes-fieis/relatorio-clientes-fieis.component.css
+++ b/client/src/app/funcionario-pages/relatorio-clientes-fieis/relatorio-clientes-fieis.component.css
@@ -1,4 +1,4 @@
-/* body {
+body {
     margin: 0;
     padding: 0;
     display: flex;
@@ -10,7 +10,7 @@
 }
 
 .background {
-    background-color: #F2F8FF;;
+    background-color: #F2F8FF;
 }
 
 .container {
@@ -63,213 +63,34 @@
     border-radius: 4px;
     appearance: none;
     cursor: pointer;
-  }
+}
   
-  .custom-select:focus {
+.custom-select:focus {
     border-color: #888;
     outline: none;
-  }
+}
   
-  .custom-select option {
+.custom-select option {
     background-color: #fff;
     color: #333;
-  }
-
-  .criterio {
-    margin-left: 20px;
-  }
-
-
-.btn-relatorio {
-    margin-bottom: 10px;
-}
-
-.periodo {
-    margin-right: 10px;
 }
 
 .criterio {
-    margin-right: 20px;
-}
-
-.custom-btn {
-    color: #fff;
-    border: none;
-    border-radius: 30px; 
-    padding: 10px 20px;
-    font-size: 18px;
-    cursor: pointer; 
-    letter-spacing: inherit;
+    margin-left: 20px;
 }
 
 .btn-relatorio {
     width: 165px;
     background-color: #3dabe1;
-    margin-right: 63%;
     height: 50px;
-}
-
-
-.btn-relatorio:hover {
-    background-color: #1c8bc1;
-}
-
-.btn-relatorio:active {
-    background-color: #66c0eb;
-}
-
-.container-buttons {
-    margin-top: 25px;
-    margin-bottom: 35px;
-    height: 50px;
-}
-
-.btn-voltar {
-    width: 120px;
-    margin-right: 20px;
-    background-color: #3dabe1;
-}
-
-.btn-voltar:hover {
-    background-color: #1c8bc1;
-}
-
-.btn-voltar:active {
-    background-color: #66c0eb;
-}
-
-.btn-pdf {
-    width: 140px;
-    background-color: green;
-}
-
-.btn-pdf:hover {
-    background-color: rgb(0, 100, 0);
-}
-
-.btn-pdf:active {
-    background-color: rgb(0, 182, 0);
-}
-
-.btn-pdf:disabled {
-    background-color: rgba(0, 160, 0, 0.637);
-}
- */
-
-
- /* RODRIGO */
-
- body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-position: center center;
-    background-size: cover;
-}
-
-.background {
-    background-color: #F2F8FF;;
-}
-
-.container {
-    max-width: 1300px;
-    margin: 0 auto;
-    text-align: left;
-    font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
-    -webkit-tap-highlight-color: transparent;
-}
-
-.custom-card {
+    margin-right: 10px; /* Ajuste o espaçamento entre os botões */
+    border: none;
     border-radius: 30px;
-    padding-left: 25px;
-    padding-top: 10px;
-    padding-right: 25px;
-    padding-bottom: 20px;
-}
-
-.container-relatorio-clientes {
-    margin-bottom: 20px;
-}
-
-.relatorio-clientes-text {
-    text-align: left;
-    font-size: 30px;
-    font-weight: 300;
-    color: #32445c;
-}
-
-.relatorio-clientes-phrase {
-    text-align: left;
-    font-size: 16px;
-    color: #32445c;
-}
-
-.container-select-periodo {
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-.custom-select {
-    width: 150px;
-    padding: 4px;
-    font-size: 16px;
-    font-family: inherit;
-    color: #333;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    appearance: none;
-    cursor: pointer;
-  }
-  
-  .custom-select:focus {
-    border-color: #888;
-    outline: none;
-  }
-  
-  .custom-select option {
-    background-color: #fff;
-    color: #333;
-  }
-
-  .criterio {
-    margin-left: 20px;
-  }
-
-
-.btn-relatorio {
-    margin-bottom: 10px;
-}
-
-.periodo {
-    margin-right: 10px;
-}
-
-.criterio {
-    margin-right: 20px;
-}
-
-.custom-btn {
-    color: #fff;
-    border: none;
-    border-radius: 30px; 
     padding: 10px 20px;
     font-size: 18px;
-    cursor: pointer; 
-    letter-spacing: inherit;
+    color: #fff;
+    cursor: pointer;
 }
-
-.btn-relatorio {
-    width: 165px;
-    background-color: #3dabe1;
-    margin-right: 63%;
-    height: 50px;
-}
-
 
 .btn-relatorio:hover {
     background-color: #1c8bc1;
@@ -277,12 +98,6 @@
 
 .btn-relatorio:active {
     background-color: #66c0eb;
-}
-
-.container-buttons {
-    margin-top: 25px;
-    margin-bottom: 35px;
-    height: 50px;
 }
 
 .btn-voltar {
@@ -302,6 +117,12 @@
 .btn-pdf {
     width: 140px;
     background-color: green;
+    border: none;
+    border-radius: 30px;
+    padding: 10px 20px;
+    font-size: 18px;
+    color: #fff;
+    cursor: pointer;
 }
 
 .btn-pdf:hover {
@@ -316,5 +137,10 @@
     background-color: rgba(0, 160, 0, 0.637);
 }
 
-
- /* RODRIGO */
+.container-buttons {
+    margin-top: 25px;
+    margin-bottom: 35px;
+    height: 50px;
+    display: flex; /* Usa flexbox para alinhar os itens */
+    justify-content: flex-start; /* Alinha os itens à esquerda */
+}
