--- a/client/src/app/funcionario-pages/relatorio-clientes/relatorio-clientes.component.html
+++ b/client/src/app/funcionario-pages/relatorio-clientes/relatorio-clientes.component.html
@@ -1,67 +1,3 @@
-<!-- <div class="background">
-  <div
-    class="d-flex justify-content-center align-items-center"
-    style="min-height: calc(100vh - 80px)"
-  >
-    <div class="container">
-      <div class="card shadow-lg custom-card border-0">
-        <div class="card-body">
-          <div class="container-relatorio-clientes-texto">
-            <h5 class="relatorio-clientes-text card-title">
-              Relatório de Clientes
-            </h5>
-            <h6 class="relatorio-clientes-phrase card-subtitle">
-              Visualize e gere um PDF contendo dados de todos os clientes.
-            </h6>
-          </div>
-            <div class="container-buttons d-flex justify-content-end">
-                <button class="btn-relatorio"
-                  type="button"
-                  class="btn btn-primary custom-btn btn-relatorio"
-                  (click)="gerarRelatorio()"
-                >
-                  Gerar Relatório
-                </button>
-                <button
-                  type="button"
-                  class="btn btn-primary custom-btn btn-voltar"
-                  (click)="voltar()"
-                >
-                  Voltar
-                </button>
-                <button
-                  type="button"
-                  class="btn btn-primary custom-btn btn-pdf"
-                  (click)="gerarPDF()"
-                  [disabled]="!relatorioClientesGerado"
-                >
-                  Gerar PDF
-                </button>
-            </div>
-
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Nome</th>
-                <th>CPF</th>
-                <th>Email</th>
-                <th>Telefone</th>
-                <th>Endereço</th>
-              </tr>
-            </thead>
-            <tbody>
-              
-            </tbody>
-          </table> 
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
- -->
-
-<!-- RODRIGO -->
-
 <div class="background">
   <div
     class="d-flex justify-content-center align-items-center"
@@ -78,7 +14,7 @@
               Visualize e gere um PDF contendo dados de todos os clientes.
             </h6>
           </div>
-          <div class="container-buttons d-flex justify-content-end">
+          <div class="container-buttons d-flex justify-content-start">
             <button
               class="btn-relatorio"
               type="button"
@@ -86,13 +22,6 @@
               (click)="gerarRelatorio()"
             >
               Gerar Relatório
-            </button>
-            <button
-              type="button"
-              class="btn btn-primary custom-btn btn-voltar"
-              (click)="voltar()"
-            >
-              Voltar
             </button>
             <button
               type="button"
@@ -115,18 +44,15 @@
               </tr>
               <tr *ngFor="let cliente of listaClientes">
                 <td>{{ cliente.usuario.nome }}</td>
-                <td>{{ cliente.cpf }}</td>
+                <td>{{ cliente.cpf  | mask:'999.999.999-99' }}</td>
                 <td>{{ cliente.usuario.email }}</td>
-                <td>{{ cliente.telefone }}</td>
+                <td>{{ cliente.telefone | mask: "(99) 9 9999-9999"}}</td>
                 <td>
                   {{ cliente.endereco.rua }}, {{ cliente.endereco.numero }} -
                   {{ cliente.endereco.cidade }}
                 </td>
               </tr>
             </thead>
-            <tbody>
-              <!-- Listagem ocorre aqui -->
-            </tbody>
           </table>
         </div>
       </div>
@@ -134,4 +60,4 @@
   </div>
 </div>
 
-<!-- RODRIGO -->
+
