--- a/client/src/app/cliente-pages/pedidos/pedidos.component.css
+++ b/client/src/app/cliente-pages/pedidos/pedidos.component.css
@@ -168,3 +168,27 @@
       background-color: #f8f9fa; /* Cor cinza claro do Bootstrap */
     }
     
+
+.text-yellow {
+    color: #ffd500;
+}
+  
+.text-red {
+    color: #d90429;
+}
+  
+.text-gray {
+    color: #6c757d;
+}
+  
+.text-blue {
+    color: #00b4d8;
+}
+  
+.text-orange {
+    color: #f48c06;
+}
+  
+.text-green {
+    color: #52b788;
+}
