correcao opções de listagem cliente

--- a/client/src/app/cliente-pages/homepage-cliente/homepage-cliente.component.html
+++ b/client/src/app/cliente-pages/homepage-cliente/homepage-cliente.component.html
@@ -39,7 +39,7 @@
                 class="btn btn-dark"
                 (click)="cancelarPedido(pedido)"
               >
-                Recolher
+                Cancelar
               </button>
             </td>
           </tr>
