limpeza de comentarios e console.log

--- a/client/src/app/funcionario-pages/relatorio-receitas/relatorio-receitas.component.css
+++ b/client/src/app/funcionario-pages/relatorio-receitas/relatorio-receitas.component.css
@@ -45,24 +45,24 @@ body {
 .container-input-data {
     margin: 15px 0;
     display: flex;
-    flex-direction: column; /* Empilha os rótulos e campos verticalmente */
-    align-items: flex-start; /* Alinha os itens à esquerda */
+    flex-direction: column; 
+    align-items: flex-start;
 }
 
 .form-label {
     color: #32445c;
     font-size: 18px;
     font-weight: 600;
-    margin-bottom: 5px; /* Espaço entre o rótulo e o campo de entrada */
+    margin-bottom: 5px; 
 }
 
 .input-data {
     color: #32445c;
     font-size: 18px;
     font-weight: 500;
-    width: 100%; /* Ajusta a largura dos campos de data para preencher a coluna */
-    max-width: 180px; /* Define a largura máxima dos campos de data */
-    margin-bottom: 15px; /* Espaço entre campos de entrada */
+    width: 100%; 
+    max-width: 180px;
+    margin-bottom: 15px; 
 }
 
 .input-data:focus {
@@ -74,7 +74,7 @@ body {
 .container-buttons {
     margin-top: 35px;
     display: flex;
-    gap: 10px; /* Espaço entre os botões */
+    gap: 10px; 
 }
 
 .custom-btn {
@@ -141,7 +141,7 @@ body {
 
 .container-text-danger {
     margin: 0;
-    color: #d9534f; /* Cor para mensagens de erro */
+    color: #d9534f; 
 }
 
 .container-table .table thead tr {
@@ -191,6 +191,6 @@ body {
 
 @media (max-width: 768px) {
     .col-md-6 {
-        max-width: 100%; /* Ajusta para 100% em telas menores para uma boa responsividade */
+        max-width: 100%;
     }
 }
