--- a/client/src/app/funcionario-pages/relatorio-clientes/relatorio-clientes.component.css
+++ b/client/src/app/funcionario-pages/relatorio-clientes/relatorio-clientes.component.css
@@ -83,7 +83,7 @@ body {
     width: 165px;
     background-color: #3dabe1;
     height: 50px;
-    margin-right: 10px; /* Ajuste o espaçamento entre os botões */
+    margin-right: 10px;
     border: none;
     border-radius: 30px;
     padding: 10px 20px;
@@ -141,6 +141,6 @@ body {
     margin-top: 25px;
     margin-bottom: 35px;
     height: 50px;
-    display: flex; /* Usa flexbox para alinhar os itens */
-    justify-content: flex-start; /* Alinha os itens à esquerda */
+    display: flex; 
+    justify-content: flex-start; 
 }
